--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,6 +6,20 @@
           lost: "迷子"
           found: "保護"
           resolved: "解決"
+        species:
+          dog: "犬"
+          cat: "猫"
+          bird: "鳥"
+          other: "その他"
+        gender:
+          male: "オス"
+          female: "メス"
+          unknown: "不明"
+        weight:
+          less_than_1kg: "1kg未満"
+          between_1_and_5kg: "1~5kg"
+          between_5_and_10kg: "5~10kg"
+          over_10kg: "10kg以上"
       pet_post:
         pet_status:
           normal: "元気"
